# fercoff

./: CHANGELOG.md  DISCLAIMER.md  LICENSE-code  LICENSE-docs  README.md
compliance/: audit-template.md  ceii-handling-procedures.md  nerc-cip-mapping.md
docs/installation/: network-config.md  offline-packages.md  quickstart.md
docs/operations/: daily-workflow.md  model-management.md
docs/troubleshooting/: common-issues.md
examples/: 01-transformer-anomaly-detection.ipynb  02-maintenance-log-query.ipynb  03-grid-event-summary.ipynb  README.md
hardware/: bom-pilot.md
software/ansible/: deploy.yml
software/ansible/group_vars/: all.yml
software/ansible/inventory/: pilot.yml
software/ansible/roles/common/tasks/: main.yml
software/ansible/roles/gateway/tasks/: main.yml
software/ansible/roles/gateway/templates/: pf.conf.j2
software/ansible/roles/sandbox/handlers/: main.yml
software/ansible/roles/sandbox/tasks/: main.yml
software/ansible/roles/sandbox/templates/: audit-logger.plist.j2  pf.conf.j2
software/scripts/: audit-export.sh  health-check.sh  model-update.sh  sandbox-init.sh
software/sgridworks-sandbox/: README.md  pyproject.toml
software/sgridworks-sandbox/src/sgridworks/: __init__.py  audit.py  gateway.py  models.py  sandbox.py
whitepaper/: v3.1.md
