[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgridworks-sandbox"
version = "0.1.0"
description = "Secure AI sandbox client for FERCoff deployments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100
